--- a/quick_draw_classifier.ipynb
+++ b/quick_draw_classifier.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "quick-draw-classifier.ipynb",
       "version": "0.3.2",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "[View in Colaboratory](https://colab.research.google.com/github/aashish2894/quick-draw-classifier/blob/master/quick_draw_classifier.ipynb)"
-      ]
-    },
     {
       "metadata": {
         "id": "IctoMK9Zeu9b",
